# crypto-data-platform

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  setup_project.ps1
data/: test.json
src/crypto_data_platform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/crypto_data_platform/common/: aws.py  config.py  exceptions.py  logger.py  path_builder.py  retry.py
src/crypto_data_platform/ingestion/: api_client.py  ingest_binance.py  storage.py  upload_to_s3.py  uploader.py
src/crypto_data_platform/models/: price.py
terraform/: locals.tf  outputs.tf  s3.tf  s3_security.tf  variables.tf  versions.tf
