[project]
name = "crypto-data-platform"
version = "0.1.0"
description = "AWS Data Engineering Pet Project"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src"]